@@ -1,6 +1,15 @@
 Summary of important user-visible changes for releases of the control package
 
 ===============================================================================
+control-2.3.54   Release Date: 2012-xx-yy   Release Manager: Lukas Reichlin
+===============================================================================
+
+** plot
+   A selection of experiments from iddata identification datasets can be
+   plotted by  plot (dat, exp)  instead of  plot (dat(:,:,:,exp)).
+   
+
+===============================================================================
 control-2.3.53   Release Date: 2012-08-27   Release Manager: Lukas Reichlin
 ===============================================================================
 
